--- a/android/RSCHackathon/app/src/main/res/values/strings.xml
+++ b/android/RSCHackathon/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RSCHackathon</string>
+    <string name="fb_login_protocol_scheme">fb222091578216716</string>
+    <string name="facebook_app_id">222091578216716</string>
 </resources>
