--- a/android/RSCHackathon/app/src/main/res/values/strings.xml
+++ b/android/RSCHackathon/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="fb_login_protocol_scheme">fb222091578216716</string>
     <string name="facebook_app_id">222091578216716</string>
     <string name="search">search</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
