--- a/android/RSCHackathon/app/src/main/res/values/strings.xml
+++ b/android/RSCHackathon/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="facebook_app_id">222091578216716</string>
     <string name="search">search</string>
     <string name="title_activity_maps">Map</string>
+    <string name="com_facebook_loginview_log_in_button">Sign in with Facebook</string>
 </resources>
