--- a/android/RSCHackathon/app/src/main/res/values/strings.xml
+++ b/android/RSCHackathon/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search">search</string>
     <string name="title_activity_maps">Map</string>
     <string name="com_facebook_loginview_log_in_button">Sign in with Facebook</string>
+    <string name="trophy">trophy</string>
 </resources>
